Add the ability to set the wrapper.java.additional.<n> arguments in the wrapper.conf with the cookbook through attributes.